create booking documentation
