# docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /
 definitions:
+  bookings.CreateBookingResponse:
+    properties:
+      id:
+        type: integer
+      total_payment:
+        type: integer
+      total_ticket:
+        type: integer
+      valid_until:
+        type: string
+    type: object
   events.EventDetail:
     properties:
       created_at:
@@ -33,6 +44,19 @@ definitions:
         type: string
       total_tickets:
         type: integer
+    type: object
+  requests.CreateBooking:
+    properties:
+      event_id:
+        type: integer
+      name:
+        type: string
+      total:
+        type: integer
+    required:
+    - event_id
+    - name
+    - total
     type: object
   requests.CreateEvent:
     properties:
@@ -154,4 +178,34 @@ paths:
       summary: Get event detail
       tags:
       - Events
+  /tickets/booking:
+    post:
+      description: Booking tickets for an event
+      parameters:
+      - description: Booking Data
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/requests.CreateBooking'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/bookings.CreateBookingResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.MyError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.MyError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.MyError'
+      summary: Booking tickets for an event
+      tags:
+      - Tickets
 swagger: "2.0"
